Network Policies/policies/network-policy-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ms3-to-ms1-ms2
spec:
  podSelector:
    matchLabels:
      app: ms3
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ms1
        - podSelector:
            matchLabels:
              app: ms2
