Network Policies/policies/network-policy-restrict.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-ms3
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ms3
  ingress: []
